--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
   },
   "dependencies": {
     "@libsql/client": "^0.17.0",
+    "@types/qrcode": "^1.5.6",
+    "axios": "^1.13.5",
     "next": "16.1.6",
+    "otpauth": "^9.5.0",
+    "qrcode": "^1.5.4",
     "react": "19.2.3",
     "react-dom": "19.2.3"
   },
